--- a/client/src/styles/Sidebar.css
+++ b/client/src/styles/Sidebar.css
@@ -7,6 +7,7 @@
 
     width:300px;
     height:calc(100vh - 36px);
+    height:calc(100dvh - 36px);
 
     border-radius:28px;
 
